[package]
name = "rc-writer"
version = "1.1.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rc-writer"
homepage = "https://magiclen.org/rc-writer"
keywords = ["rc", "refmut", "refcell", "write", "option"]
categories = ["data-structures"]
description = "A tiny implement for writing data to a reference counted instance."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
