[package]
name = "rc-writer"
version = "1.1.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/rc-writer"
homepage = "https://magiclen.org/rc-writer"
keywords = ["rc", "refmut", "refcell", "write", "option"]
categories = ["data-structures"]
description = "A tiny implement for writing data to a reference counted instance."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
